update readme and code

--- a/Earthquake_Qtr-checkpoint.ipynb
+++ b/Earthquake_Qtr-checkpoint.ipynb
@@ -567,6 +567,7 @@
    ],
    "source": [
     "#To plot using geopandas on a worldmap\n",
+    "#Note:  Geopandas is not an easy application to install if you don't use it.  It is really cool for this map.\n",
     "worldmap = gpd.read_file(gpd.datasets.get_path(\"naturalearth_lowres\"))\n",
     "fig, ax = plt.subplots(figsize=(18, 9))\n",
     "worldmap.plot(color=\"lightgrey\", ax=ax)\n",
@@ -585,11 +586,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "14750e9d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>place</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23:47:44.170000</td>\n",
+       "      <td>17.943333</td>\n",
+       "      <td>-66.996500</td>\n",
+       "      <td>5.77</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>6 km ESE of La Parguera, Puerto Rico</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23:32:34.458000</td>\n",
+       "      <td>-22.807000</td>\n",
+       "      <td>171.084500</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>southeast of the Loyalty Islands</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23:18:16.617000</td>\n",
+       "      <td>-4.807800</td>\n",
+       "      <td>139.426700</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>5.20</td>\n",
+       "      <td>252 km NW of Kiunga, Papua New Guinea</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23:13:42.735000</td>\n",
+       "      <td>-22.881900</td>\n",
+       "      <td>170.807100</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>southeast of the Loyalty Islands</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23:13:07.561000</td>\n",
+       "      <td>41.419300</td>\n",
+       "      <td>72.909700</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>44 km NNE of Bazar-Korgon, Kyrgyzstan</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7015</th>\n",
+       "      <td>02:17:56.815000</td>\n",
+       "      <td>38.725100</td>\n",
+       "      <td>73.482700</td>\n",
+       "      <td>105.79</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>74 km NW of Murghob, Tajikistan</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7016</th>\n",
+       "      <td>01:38:57.636000</td>\n",
+       "      <td>52.922000</td>\n",
+       "      <td>-163.660500</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>194 km SE of Akutan, Alaska</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7017</th>\n",
+       "      <td>00:27:51.990000</td>\n",
+       "      <td>40.477167</td>\n",
+       "      <td>-124.322333</td>\n",
+       "      <td>19.08</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>12km SSW of Ferndale, CA</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7018</th>\n",
+       "      <td>00:10:28.735000</td>\n",
+       "      <td>-8.763300</td>\n",
+       "      <td>124.351300</td>\n",
+       "      <td>104.90</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>48 km N of Pante Makasar, Timor Leste</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7019</th>\n",
+       "      <td>00:02:24.512000</td>\n",
+       "      <td>-17.026900</td>\n",
+       "      <td>-174.214200</td>\n",
+       "      <td>60.87</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>126 km SSW of Hihifo, Tonga</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7020 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 time   latitude   longitude   depth   mag  \\\n",
+       "0     23:47:44.170000  17.943333  -66.996500    5.77  2.50   \n",
+       "1     23:32:34.458000 -22.807000  171.084500   10.00  4.60   \n",
+       "2     23:18:16.617000  -4.807800  139.426700   10.00  5.20   \n",
+       "3     23:13:42.735000 -22.881900  170.807100   10.00  4.40   \n",
+       "4     23:13:07.561000  41.419300   72.909700   10.00  4.20   \n",
+       "...               ...        ...         ...     ...   ...   \n",
+       "7015  02:17:56.815000  38.725100   73.482700  105.79  4.20   \n",
+       "7016  01:38:57.636000  52.922000 -163.660500   10.00  3.10   \n",
+       "7017  00:27:51.990000  40.477167 -124.322333   19.08  2.88   \n",
+       "7018  00:10:28.735000  -8.763300  124.351300  104.90  4.10   \n",
+       "7019  00:02:24.512000 -17.026900 -174.214200   60.87  4.60   \n",
+       "\n",
+       "                                      place        date  \n",
+       "0      6 km ESE of La Parguera, Puerto Rico  2022-03-31  \n",
+       "1          southeast of the Loyalty Islands  2022-03-31  \n",
+       "2     252 km NW of Kiunga, Papua New Guinea  2022-03-31  \n",
+       "3          southeast of the Loyalty Islands  2022-03-31  \n",
+       "4     44 km NNE of Bazar-Korgon, Kyrgyzstan  2022-03-31  \n",
+       "...                                     ...         ...  \n",
+       "7015        74 km NW of Murghob, Tajikistan  2022-01-01  \n",
+       "7016            194 km SE of Akutan, Alaska  2022-01-01  \n",
+       "7017               12km SSW of Ferndale, CA  2022-01-01  \n",
+       "7018  48 km N of Pante Makasar, Timor Leste  2022-01-01  \n",
+       "7019            126 km SSW of Hihifo, Tonga  2022-01-01  \n",
+       "\n",
+       "[7020 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
   }
  ],
  "metadata": {
