Fine tune code and add requirements

--- a/Earthquake_Qtr.ipynb
+++ b/Earthquake_Qtr.ipynb
@@ -16,8 +16,7 @@
     "import plotly.express as px\n",
     "from geopy.geocoders import Nominatim\n",
     "from shapely.geometry import Point\n",
-    "import geocoder as gc\n",
-    "import geopy"
+    "import geocoder as gc\n"
    ]
   },
   {
@@ -22665,7 +22664,7 @@
     "#To find what percent of the days in the first quarter had earthquakes (January 31, February 28, March 31 days for a total of 90 actual days for the first quarter 2022.)\n",
     "percent_days = (total_days/(31+28+31)) * 100\n",
     "print(percent_days)\n",
-    "print(\"O the 90 days in the first quarter of 2022, we had an earthquake on each day.  Many times more than one earthquake per day worldwide.\")"
+    "print(\"Of the 90 days in the first quarter of 2022, we had an earthquake on each day.  Many times more than one earthquake per day worldwide.\")"
    ]
   },
   {
