update Markdowns and readme

--- a/Earthquake_Qtr.ipynb
+++ b/Earthquake_Qtr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "id": "a7e0dfb4",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,20 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import pandas as pd\n",
-    "import plotly.express as px\n"
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb350b30",
+   "metadata": {},
+   "source": [
+    "Gather data and choose columns to use; make dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "e42a52bf",
    "metadata": {},
    "outputs": [
@@ -184,7 +192,7 @@
        "[7020 rows x 6 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "id": "6a96bfd1",
    "metadata": {},
    "outputs": [
@@ -213,7 +221,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "id": "1610b5d9",
    "metadata": {},
    "outputs": [
@@ -235,7 +243,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,8 +254,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6e5deda",
+   "metadata": {},
+   "source": [
+    "Make a copy of the dataframe in case of error"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "id": "2888dda1",
    "metadata": {},
    "outputs": [
@@ -293,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "id": "98bbe335",
    "metadata": {},
    "outputs": [
@@ -309,7 +325,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "id": "eb9144e2",
    "metadata": {},
    "outputs": [
@@ -331,7 +347,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,8 +358,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5eab7db",
+   "metadata": {},
+   "source": [
+    "Clean data, verify data and seperate date and time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "id": "e5edf867",
    "metadata": {},
    "outputs": [
@@ -359,7 +383,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "id": "6242e32e",
    "metadata": {},
    "outputs": [
@@ -554,7 +578,7 @@
        "[7020 rows x 7 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "id": "17414753",
    "metadata": {},
    "outputs": [
@@ -43594,7 +43618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 45,
    "id": "841218b6",
    "metadata": {},
    "outputs": [
@@ -43640,7 +43664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "id": "14750e9d",
    "metadata": {},
    "outputs": [
@@ -43694,7 +43718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "id": "5aa90f90",
    "metadata": {},
    "outputs": [
@@ -43765,7 +43789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "id": "93b2ee3a",
    "metadata": {},
    "outputs": [
@@ -43803,7 +43827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "id": "49132cbe",
    "metadata": {},
    "outputs": [
@@ -43968,7 +43992,7 @@
        "[90 rows x 6 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43989,7 +44013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "id": "39797a85",
    "metadata": {},
    "outputs": [
