--- a/Earthquake_Qtr.ipynb
+++ b/Earthquake_Qtr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "id": "a7e0dfb4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "id": "e42a52bf",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "[7020 rows x 6 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "id": "6a96bfd1",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "id": "1610b5d9",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "id": "2888dda1",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "id": "98bbe335",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "id": "eb9144e2",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "id": "e5edf867",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "id": "6242e32e",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
        "[7020 rows x 7 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "id": "17414753",
    "metadata": {},
    "outputs": [
@@ -43618,7 +43618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "id": "841218b6",
    "metadata": {},
    "outputs": [
@@ -43664,7 +43664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "id": "14750e9d",
    "metadata": {},
    "outputs": [
@@ -43718,7 +43718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "id": "5aa90f90",
    "metadata": {},
    "outputs": [
@@ -43730,9 +43730,9 @@
       "The center value of the magnitude rage is  4.2\n",
       "The magnitude that occurs most frequently is  0    4.4\n",
       "Name: mag, dtype: float64\n",
-      "The most earthquake acitivty shows on  0    2022-01-11\n",
+      "The most earthquake activty shows on  0    2022-01-11\n",
       "Name: date, dtype: object\n",
-      "time         90\n",
+      "The total number of days that had an earthquake  time         90\n",
       "latitude     90\n",
       "longitude    90\n",
       "depth        90\n",
@@ -43767,7 +43767,7 @@
     "\n",
     "#To find which day has the most earthquake activity\n",
     "mode_day = df2['date'].mode()\n",
-    "print('The most earthquake acitivty shows on ', mode_day)\n",
+    "print('The most earthquake activty shows on ', mode_day)\n",
     "\n",
     "#To aquire the total number of days that had earthquakes\n",
     "total_days = df2.groupby(['date']).nunique().count()\n",
@@ -43789,7 +43789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 104,
    "id": "93b2ee3a",
    "metadata": {},
    "outputs": [
@@ -43808,6 +43808,7 @@
    ],
    "source": [
     "#Chart to show which magnitudes occur most frequently\n",
+    "\n",
     "highest = df2.groupby(['mag'], as_index= False).count()\n",
     "plt.figure(figsize = (18,9))\n",
     "plt.scatter(highest['mag'], highest['time'], color = 'purple')\n",
@@ -43827,7 +43828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 111,
    "id": "49132cbe",
    "metadata": {},
    "outputs": [
@@ -43992,7 +43993,7 @@
        "[90 rows x 6 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44013,7 +44014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "39797a85",
    "metadata": {},
    "outputs": [
@@ -44038,14 +44039,6 @@
     "plt.title(\"Number of Earthquakes per Day\")\n",
     "plt.show()       "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0adee70e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
